[gd_scene load_steps=6 format=3 uid="uid://lb27ot3sexda"]

[ext_resource type="Script" path="res://Scripts/grandma_minigame.gd" id="1_6ruq4"]
[ext_resource type="LabelSettings" uid="uid://dpfy28ohntv0v" path="res://Resources/fonts_styles/sty2.tres" id="2_rwgel"]
[ext_resource type="FontFile" uid="uid://cdbqakhodao41" path="res://Resources/Fonts/GoogleSans-Bold.ttf" id="3_4o5ek"]
[ext_resource type="FontFile" uid="uid://b3dwecgmj1owb" path="res://Resources/Fonts/GoogleSans-Regular.ttf" id="4_ltdlg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jcwbk"]
bg_color = Color(0.123788, 0.177709, 0.141201, 0.784314)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_6ruq4")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GamePanel" type="Panel" parent="Panel"]
z_index = 1
custom_minimum_size = Vector2(450, 12)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 40.0
offset_right = 225.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/GamePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -38.5
offset_right = 74.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/GamePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TitleLabel" type="Label" parent="Panel/GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "หาคำผิดในจดหมาย"
label_settings = ExtResource("2_rwgel")
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="Panel/GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "คลิกที่คำที่คิดว่าผิด แล้วพิมพ์คำที่ถูกต้อง"
label_settings = ExtResource("2_rwgel")
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="Panel/GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ความคืบหน้า: 0/3"
label_settings = ExtResource("2_rwgel")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 180.0
offset_right = 200.0
offset_bottom = 679.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ArticleContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer/ScrollContainer/ArticleContainer"]
layout_mode = 2

[node name="CorrectionPanel" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jcwbk")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CorrectionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -52.5
offset_right = 48.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="QuestionLabel" type="Label" parent="Panel/CorrectionPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_4o5ek")
theme_override_font_sizes/font_size = 24
text = "คำที่เลือก: [...]"
horizontal_alignment = 1

[node name="AnswerEdit" type="LineEdit" parent="Panel/CorrectionPanel/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ltdlg")
theme_override_font_sizes/font_size = 16
placeholder_text = "พิมพ์คำที่ถูกต้อง..."
alignment = 1
caret_blink = true

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/CorrectionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="SubmitButton" type="Button" parent="Panel/CorrectionPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ltdlg")
theme_override_font_sizes/font_size = 16
text = "แก้ไข"

[node name="CancelButton" type="Button" parent="Panel/CorrectionPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ltdlg")
theme_override_font_sizes/font_size = 16
text = "ยกเลิก"
